Fixed image alignment with directory text. Will complete in the future.

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,5 @@
 /* formatting for composite image */
-#compositeJPG{
+#compositePNG{
     /* float: left; */
     float: top;
     margin: 0 0 0 0;
@@ -9,21 +9,16 @@
 
 .wrapper {
     
-    width: 10%;
-    height: 25%;
-    border: 1px solid red;
+    width: 20%;
+    height: 100%;
+    /*border: 1px solid red;*/
 }
 
 .box {
     margin: left;
     
-    width: 150px;
-    height: 28%;
-    background: green;
-}
-
-.div1 {
-    margin: auto;
-    width: 150px;
-    height: 28%;
+    width: 20%;
+    height: 100%;
+    /*background: green;*/
+    background: clear;
 }
